Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28855

SEGV around dict_free_vc_templ during DROP INDEX

    XMLWordPrintable

Details

    Description

      origin/10.6 6c82ab4f726b83f09646c22afddd4c102e60607b 2022-06-14T15:33:11+03:00
      # 2022-06-15T12:12:17 [3188740] | [rr 3191641 910722]2022-06-15 12:08:51 200 [Note] InnoDB: Online DDL : Start reading clustered index of the table and create temporary files
      # 2022-06-15T12:12:17 [3188740] | [rr 3191641 910750]2022-06-15 12:08:51 200 [Note] InnoDB: Online DDL : End of reading clustered index of the table and create temporary files
      # 2022-06-15T12:12:17 [3188740] | [rr 3191641 910754]2022-06-15 12:08:51 200 [Note] InnoDB: Online DDL : Applying log to index
      # 2022-06-15T12:12:17 [3188740] | [rr 3191641 912270]220615 12:08:51 [rr 3191641 912273][ERROR] mysqld got signal 11 ;
       
      Thread 2 received signal SIGSEGV, Segmentation fault.
      [Switching to Thread 3191641.3192456]
      0x000055db215d865d in dict_free_vc_templ (vc_templ=0x0) at /data/Server/10.6R/storage/innobase/include/dict0dict.inl:1184
      1184            UT_DELETE_ARRAY(vc_templ->default_rec);
      (rr) bt
      #0  0x000055db215d865d in dict_free_vc_templ (vc_templ=0x0) at /data/Server/10.6R/storage/innobase/include/dict0dict.inl:1184
      #1  0x000055db216106d4 in ha_innobase::prepare_inplace_alter_table (this=0x61d000a758b8, altered_table=0x12eb5c66b290, ha_alter_info=0x12eb5c66ab90) at /data/Server/10.6R/storage/innobase/handler/handler0alter.cc:8215
      #2  0x000055db20c7625a in handler::ha_prepare_inplace_alter_table (this=0x61d000a758b8, altered_table=0x12eb5c66b290, ha_alter_info=0x12eb5c66ab90) at /data/Server/10.6R/sql/handler.cc:5199
      #3  0x000055db206edea2 in mysql_inplace_alter_table (thd=0x62b00009a218, table_list=0x62b0000a1418, table=0x6190003aed98, altered_table=0x12eb5c66b290, ha_alter_info=0x12eb5c66ab90, target_mdl_request=0x12eb5c66ac90, 
          ddl_log_state=0x12eb5c66a9b0, trigger_param=0x12eb5c66b700, alter_ctx=0x12eb5c66c1a0) at /data/Server/10.6R/sql/sql_table.cc:7359
      #4  0x000055db207025ca in mysql_alter_table (thd=0x62b00009a218, new_db=0x62b00009ec18, new_name=0x62b00009f030, create_info=0x12eb5c66d650, table_list=0x62b0000a1418, alter_info=0x12eb5c66d520, order_num=0, order=0x0, 
          ignore=false, if_exists=false) at /data/Server/10.6R/sql/sql_table.cc:10278
      #5  0x000055db20891700 in Sql_cmd_alter_table::execute (this=0x62b0000a1bf0, thd=0x62b00009a218) at /data/Server/10.6R/sql/sql_alter.cc:542
      #6  0x000055db20492589 in mysql_execute_command (thd=0x62b00009a218, is_called_from_prepared_stmt=false) at /data/Server/10.6R/sql/sql_parse.cc:5996
      #7  0x000055db2049e956 in mysql_parse (thd=0x62b00009a218, rawbuf=0x62b0000a1238 "ALTER TABLE t1 DROP KEY `Marvão_idx1`, DROP INDEX `uidx2`, ALGORITHM = NOCOPY, LOCK = DEFAULT  /* E_R Thread2 QNO 3070 CON_ID 210 */", 
          length=133, parser_state=0x12eb5c66eb20) at /data/Server/10.6R/sql/sql_parse.cc:8029
      #8  0x000055db20476d64 in dispatch_command (command=COM_QUERY, thd=0x62b00009a218, 
          packet=0x629000505219 " ALTER TABLE t1 DROP KEY `Marvão_idx1`, DROP INDEX `uidx2`, ALGORITHM = NOCOPY, LOCK = DEFAULT  /* E_R Thread2 QNO 3070 CON_ID 210 */ ", packet_length=135, blocking=true)
          at /data/Server/10.6R/sql/sql_parse.cc:1896
      #9  0x000055db204741ab in do_command (thd=0x62b00009a218, blocking=true) at /data/Server/10.6R/sql/sql_parse.cc:1409
      #10 0x000055db20877b73 in do_handle_one_connection (connect=0x608000040fb8, put_in_cache=true) at /data/Server/10.6R/sql/sql_connect.cc:1418
      #11 0x000055db208773ff in handle_one_connection (arg=0x608000002eb8) at /data/Server/10.6R/sql/sql_connect.cc:1312
      #12 0x00007fc54a654609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #13 0x00007fc54a790293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      (rr)
       
      pluto:/data/results/1655290115/TBR-1318
      _RR_TRACE_DIR="./1/rr" rr replay --mark-stdio
       
      # rqg.pl  : Version 4.0.6 (2022-05)
      #
      # $RQG_HOME/rqg.pl \
      # --grammar=conf/mariadb/table_stress_innodb_nocopy2.yy \
      # --gendata=conf/mariadb/table_stress.zz \
      # --gendata_sql=conf/mariadb/table_stress.sql \
      # --reporters=CrashRecovery1 \
      # --mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
      # --mysqld=--loose-idle_write_transaction_timeout=0 \
      # --mysqld=--loose-idle_transaction_timeout=0 \
      # --mysqld=--loose-idle_readonly_transaction_timeout=0 \
      # --mysqld=--connect_timeout=60 \
      # --mysqld=--interactive_timeout=28800 \
      # --mysqld=--slave_net_timeout=60 \
      # --mysqld=--net_read_timeout=30 \
      # --mysqld=--net_write_timeout=60 \
      # --mysqld=--loose-table_lock_wait_timeout=50 \
      # --mysqld=--wait_timeout=28800 \
      # --mysqld=--lock-wait-timeout=86400 \
      # --mysqld=--innodb-lock-wait-timeout=50 \
      # --no-mask \
      # --queries=10000000 \
      # --seed=random \
      # --reporters=Backtrace \
      # --reporters=ErrorLog \
      # --reporters=Deadlock1 \
      # --validators=None \
      # --mysqld=--log_output=none \
      # --mysqld=--log_bin_trust_function_creators=1 \
      # --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
      # --engine=InnoDB \
      # --restart_timeout=240 \
      # --mysqld=--plugin-load-add=file_key_management.so \
      # --mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
      # --mysqld=--plugin-load-add=provider_lzo.so \
      # --mysqld=--plugin-load-add=provider_bzip2.so \
      # --mysqld=--plugin-load-add=provider_lzma.so \
      # --mysqld=--plugin-load-add=provider_snappy.so \
      # --mysqld=--plugin-load-add=provider_lz4.so \
      # --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=300 \
      # --duration=300 \
      # --mysqld=--loose-innodb_read_only_compressed=OFF \
      # --mysqld=--innodb_stats_persistent=off \
      # --mysqld=--innodb_adaptive_hash_index=on \
      # --mysqld=--loose-innodb_evict_tables_on_commit_debug=off \
      # --mysqld=--loose-max-statement-time=30 \
      # --threads=9 \
      # --mysqld=--innodb-use-native-aio=0 \
      # --mysqld=--loose-gdb \
      # --mysqld=--loose-debug-gdb \
      # --rr=Extended \
      # --rr_options=--chaos --wait \
      # --mysqld=--innodb_undo_tablespaces=3 \
      # --mysqld=--innodb_undo_log_truncate=ON \
      # --mysqld=--loose_innodb_change_buffering=changes \
      # --mysqld=--innodb_rollback_on_timeout=OFF \
      # --vardir_type=fast \
      # --mysqld=--innodb_page_size=32K \
      # --mysqld=--innodb-buffer-pool-size=24M \
      # --no_mask \
      # <local settings>
      
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              mleich Matthias Leich
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 5.75h
                  1d 5.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.