MDEV-28855 SEGV around dict_free_vc_templ during DROP INDEX

protect shared dict_table_t::vc_templ with a mutex,
same as in ha_innobase::open